# Roads

./: .gitignore  Cargo.toml  docker-compose.yml
.sqlx/: query-d4f57127f664ccbe3d81f98ed168503fb679a2b3241a768fa259b08bba789e63.json  query-d68bf2341a8602354d529ee677370d5faf0b351209c0b529a3813534b81d9b5b.json
migrations/: 20230831220836_create_routes_table.sql
scripts/: init_db.sh
src/: main.rs  router.rs
utils/: not_found.html
