[package]
name = "roads"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features=["macros", "rt-multi-thread"] }
hyper = { version="0.14", features=["full"] }
tower = { version="0.4", features=["make"] }
axum = { version = "0.6", features = ["macros"] }
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dependencies.sqlx]
version = "0.7"
features = [
    "postgres",
    "tls-rustls",
    "runtime-tokio",
    "migrate",
    "macros",
    "uuid"
]
